# firmware

./: .Dockerfile.alpine.todo  .clang-format  .coderabbit.yaml  .env  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.yml  .mcp.json  .pre-commit-config.yaml  .semgrepignore  8MB_no_ota.csv  AGENTS.md  BRANCH_STRATEGY.md  CHANGES.md  CLAUDE.md  CMakeLists.txt  CMakeListsPrivate.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.esp32  Dockerfile.test  FAKETEC_OPTIMIZATION_REPORT.md  Issues.txt  MenuHandler.cpp  MeshPlugin.h  NodeListRenderer.h  PLAN.md  PLAN_IMPLEMENTACJI_MODULU_BLE_GPS.md  PURPOSE.md  README-docker.md  README.md  SECURITY.md  SECURITY_AUDIT.md  SIGNAL_ROUTING.md  Screen.cpp  SoI_Design.md  (+55 more)
mcp-server/: .gitignore  README.md  pyproject.toml  run-tests.sh
mcp-server/scripts/: datadog-dashboard.json  fleetsuite.sh  mtlog_to_datadog.py  web-dev.sh
mcp-server/tests/: README.md  _port_discovery.py  _power.py  conftest.py  test_00_bake.py  tool_coverage.py
mcp-server/web-ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: .gitignore  AccelerometerThread.h  AmbientLightLock.cpp  AmbientLightLock.h  AmbientLightingEffects.cpp  AmbientLightingEffects.h  AmbientLightingThread.h  AudioThread.h  BluetoothCommon.cpp  BluetoothCommon.h  BluetoothStatus.h  ButtonThread.cpp  ButtonThread.h  CMakeLists.txt  CustomRF95.cpp  CustomRF95.h  DebugConfiguration.cpp  DebugConfiguration.h  DisplayFormatters.cpp  DisplayFormatters.h  FRAMBatchStorage.cpp  FRAMBatchStorage.h  FSCommon.cpp  FSCommon.h  FSHelper.cpp  FSHelper.h  FakeScreen.h  GPS.cpp  GPS.h  GPSNema.cpp  GPSNema.h  GPSStatus.h  GpioLogic.cpp  GpioLogic.h  HeltecFlashStorage.cpp  HeltecFlashStorage.h  JMTest.cpp  JMTest.h  Led.cpp  Led.h  (+109 more)
src/Filesystem/: ExternalLittleFS.cpp  ExternalLittleFS.h  FSCommon.cpp  FSCommon.h  NodeDB.cpp  NodeDB.h  SafeFile.cpp  SafeFile.h  diskio.h  ff.c
src/Fusion/: FusionAhrs.c  FusionAhrs.h  FusionAxes.h  FusionCalibration.h  FusionCompass.c  FusionCompass.h  FusionConvention.h  FusionMath.h  FusionOffset.c  FusionOffset.h  GPSIMUFusion.cpp  GPSIMUFusion.h  GPSIMUFusionDebug.h  GPSIMUFusionDemo.cpp  GPSIMUFusionDemo.h  README_GPS_IMU_Debug.md
src/backup/: Observer.cpp  SPILock.cpp  SerialConsole.cpp
src/bare/: NRF52Bluetooth.cpp  main-bare.cpp  main-nrf52.cpp
src/ble_meshudp/: README_INTEGRATION.txt  ble_meshudp.c  ble_meshudp.h  transport_ble_datagram.cpp
src/bluetooth/: HostedBluetooth.cpp  HostedBluetooth.h
src/buzz/: BuzzerFeedbackThread.cpp  BuzzerFeedbackThread.h  FindNodeBuzzer.cpp  FindNodeBuzzer.h  buzz.cpp  buzz.h  pitches.h
src/compat/: AtomicBuiltins.cpp
src/concurrency/: BaseNotifiedWorkerThread.h  BaseThread.cpp  BaseThread.h  BinarySemaphoreFreeRTOS.cpp  BinarySemaphoreFreeRTOS.h  BinarySemaphorePosix.cpp  BinarySemaphorePosix.h  FreeRtosNotifiedWorkerThread.cpp  FreeRtosNotifiedWorkerThread.h  FreeRtosThread.cpp  FreeRtosThread.h  InterruptableDelay.cpp  InterruptableDelay.h  Lock.cpp  Lock.h  LockGuard.cpp  LockGuard.h  NotifiedWorkerThread.cpp  NotifiedWorkerThread.h  OSThread.cpp  OSThread.h  PacketQueue.h  Periodic.h  PeriodicScheduler.cpp  PeriodicScheduler.h  PeriodicTask.cpp  PeriodicTask.h  PosixNotifiedWorkerThread.cpp  PosixNotifiedWorkerThread.h  PosixThread.h  Thread.cpp  Thread.h  WorkerThread.cpp  WorkerThread.h
src/crypto/: README.md  Se050Client.cpp  Se050Client.h
src/cubecell/: FS.h
src/debug/: i2cScan.h
src/detect/: LoRaRadioType.h  ReClockI2C.h  ScanI2C.cpp  ScanI2C.h  ScanI2CConsumer.cpp  ScanI2CConsumer.h  ScanI2CTwoWire.cpp  ScanI2CTwoWire.h  Se050Transport.cpp  Se050Transport.h  axpDebug.h  einkScan.h  i2cScan.h  reClockI2C.cpp  reClockI2C.h
src/esp32/: BluetoothSoftwareUpdate.cpp  BluetoothSoftwareUpdate.h  BluetoothUtil.cpp  BluetoothUtil.h  CallbackCharacteristic.h  ESP32Bluetooth.cpp  ESP32Bluetooth.h  ESP32CryptoEngine.cpp  MeshBluetoothService.cpp  MeshBluetoothService.h  NimbleSoftwareUpdate.c  SimpleAllocator.cpp  SimpleAllocator.h  WiFiServerAPI.cpp  WiFiServerAPI.h  architecture.h  main-esp32.cpp
src/gps/: Air530GPS.cpp  Air530GPS.h  FakeUART.cpp  FakeUART.h  GPS.cpp  GPS.h  GPSUpdateScheduling.cpp  GPSUpdateScheduling.h  GeoCoord.cpp  GeoCoord.h  GpsProfile.h  GpsUartRingBuffer.cpp  GpsUartRingBuffer.h  HardwareSerialGpsAdapter.h  IGpsSerial.h  NEMAGPS.cpp  NEMAGPS.h  NMEAGPS.cpp  NMEAGPS.h  NMEAWPL.cpp  NMEAWPL.h  RTC.cpp  RTC.h  UBloxGPS.cpp  UBloxGPS.h  cas.cpp  cas.h  ubx.cpp  ubx.h
src/graphics/: BRC.cpp  BRC.h  BaseUIEInkDisplay.cpp  BaseUIEInkDisplay.h  ColorOverlayQueue.cpp  ColorOverlayQueue.h  ColorPalette.cpp  ColorPalette.h  EInkDisplay.cpp  EInkDisplay.h  EInkDisplay2.cpp  EInkDisplay2.h  EInkDynamicDisplay.cpp  EInkDynamicDisplay.h  EInkMultiWrapper.h  EInkParallelDisplay.cpp  EInkParallelDisplay.h  EmoteRenderer.cpp  EmoteRenderer.h  GAT562Arcade.cpp  GAT562Arcade.h  GAT562NotifyLed.cpp  GAT562NotifyLed.h  GxEPD2Multi.h  GxEPD2_102_Meshtastic.cpp  GxEPD2_102_Meshtastic.h  HUB75Display.cpp  HUB75Display.h  NeoPixel.cpp  NeoPixel.h  NomadStarLED.h  Panel_sdl.cpp  Panel_sdl.hpp  PointStruct.h  RAKled.h  Screen.cpp  Screen.h  ScreenChatHistory.cpp  ScreenChatHistory.h  ScreenFonts.h  (+34 more)
src/input/: BBQ10Keyboard.cpp  BBQ10Keyboard.h  ButtonHelper.h  ButtonThread.cpp  ButtonThread.h  ButtonThreadImpl.cpp  ButtonThreadImpl.h  CardputerAdvKeyboard.cpp  CardputerAdvKeyboard.h  CardputerKeyboard.cpp  CardputerKeyboard.h  ExpressLRSFiveWay.cpp  ExpressLRSFiveWay.h  HackadayCommunicatorKeyboard.cpp  HackadayCommunicatorKeyboard.h  HapticFeedback.cpp  HapticFeedback.h  InputBroker.cpp  InputBroker.h  LinuxInput.cpp  LinuxInput.h  LinuxInputImpl.cpp  LinuxInputImpl.h  LinuxJoystick.cpp  LinuxJoystick.h  MCP23017Keyboard.cpp  MCP23017Keyboard.h  MPR121Keyboard.cpp  MPR121Keyboard.h  PCF8574Button.cpp  PCF8574Button.h  RotaryEncoderImpl.cpp  RotaryEncoderImpl.h  RotaryEncoderInterruptBase.cpp  RotaryEncoderInterruptBase.h  RotaryEncoderInterruptImpl1.cpp  RotaryEncoderInterruptImpl1.h  STC8HKeyboard.cpp  STC8HKeyboard.h  (+64 more)
(+4132 files in other folders)
