[project]
name = "meshtastic-mcp"
version = "0.1.0"
description = "MCP server for Meshtastic firmware development: device discovery, PlatformIO tooling, flashing, serial monitoring, and device administration via the meshtastic Python API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
authors = [{ name = "thebentern" }]
dependencies = ["mcp>=1.2", "pyserial>=3.5", "meshtastic>=2.7.8"]

[project.optional-dependencies]
dev = ["pytest>=7"]
test = [
  "pytest>=8",
  "pytest-html>=4",
  "pytest-reportlog>=0.4",
  "pytest-timeout>=2.3",
  "coverage[toml]>=7",
  "pyyaml>=6",
]
# Web stack (FastAPI backend + pywebview desktop window) that replaces the
# Textual TUI. Serves the built Vue SPA in `web/static`. Camera streaming
# reuses the `[ui]` extra (opencv-python-headless).
web = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "aiosqlite>=0.19",
  "pywebview>=5.0",
]
# UI test tier + `capture_screen` MCP tool. Optional because the ML OCR
# model alone is ~100 MB and camera hardware is user-supplied.
#   pip install -e '.[ui]'     — full (OpenCV + easyocr)
#   pip install -e '.[ui-min]' — image capture only, no OCR
ui = [
  "opencv-python-headless>=4.9",
  "numpy>=1.26",
  "easyocr>=1.7",
  "Pillow>=10.0",
]
ui-min = ["opencv-python-headless>=4.9", "numpy>=1.26"]

[project.scripts]
meshtastic-mcp = "meshtastic_mcp.__main__:main"
# Web stack replacing the Textual TUI: a FastAPI backend (REST + WebSocket)
# that reuses the library modules and serves the Vue SPA, opened in a
# pywebview window (`--browser` to serve only).
meshtastic-mcp-web = "meshtastic_mcp.web.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meshtastic_mcp"]
